k8s/jvl-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: jvl
spec: {}
status: {}
