k8s/jvl-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: jvl
  name: jvl
  namespace: jvl
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: jvl
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: jvl
    spec:
      containers:
      - image: pamir/jvm-vulnerable-lab:0.0.1
        imagePullPolicy: IfNotPresent
        name: jvl
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
